made fixes to top bar, ignored foundation defaults because they were breaking. putting in additional css for spacing

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -23,10 +23,50 @@ nav ul li a img{
 }
 
 .social-list li a{
-// 	padding-left: 0px;
-// 	padding-right: 0px;
-  margin-right: 10px;
+// // 	padding-left: 0px;
+// // 	padding-right: 0px;
+  // margin-right: 10px;
+  //margin-left: 10px;
+  padding: 0px;
+  // text-align: center;
 }
+
+
+#top > div > nav > section > ul.left.small-4.main-nav > li > a{
+  padding-right: 20%;
+  padding-left: 20%;
+
+}
+
+.social-list {
+  max-width: 150px;
+}
+
+#top > div > nav > section > ul.right.small-4.social-list > li {
+  margin-left: 5px;
+  margin-left: 5px;
+}
+
+#top > div > nav > section > ul.right.small-4.social-list > li{
+  margin-right: 5px;
+  margin-left: 5px;
+
+}
+
+nav.top-bar{
+  margin-right: 0px;
+}
+
+// .top-bar-section ul li > a {
+//   padding-left: 10px;
+//   padding-right: 10px;
+// }
+
+// .top-bar-section ul li  a {
+//   padding-left: 10px;
+//   padding-right: 10px;
+// }
+
 
 /*.social a img{
   width: 3%;
